--- a/app/src/main/res/layout/adapter_record_list_item_detail.xml
+++ b/app/src/main/res/layout/adapter_record_list_item_detail.xml
@@ -1,21 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="30dp"
-    android:gravity="center_horizontal"
+    android:layout_height="@dimen/dimen_dp_50"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_record_list_item_plan_name"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingLeft="@dimen/dimen_dp_15" />
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/dimen_dp_40"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_record_list_item_plan_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/blackColor"
+            android:textSize="@dimen/text_size_sp_16" />
+
+        <TextView
+            android:id="@+id/tv_record_list_item_plan_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/fr_record_text_time_color"
+            android:textSize="@dimen/text_size_sp_12" />
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/tv_record_list_item_plan_time"
-        android:layout_width="0dp"
+        android:id="@+id/tv_time_duration"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center" />
-</LinearLayout>
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="@dimen/dimen_dp_40"
+        android:textColor="@color/blackColor"
+        android:textSize="@dimen/text_size_sp_16" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_dp_1"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="@dimen/dimen_dp_15"
+        android:layout_marginRight="@dimen/dimen_dp_15"
+        android:background="@color/divider_line" />
+
+</RelativeLayout>
