--- a/app/src/main/res/layout/bar_plan_content_title.xml
+++ b/app/src/main/res/layout/bar_plan_content_title.xml
@@ -23,6 +23,7 @@
         android:layout_alignParentRight="true">
 
         <ImageView
+            android:id="@+id/iv_option"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
