--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,8 @@
     <color name="record_time_recording_text">#FFD134</color>
     <color name="color_transparent">@android:color/transparent</color>
     <color name="divider_line">#E5E5E5</color>
+
+    <color name="fr_record_text_color">#8E8E93</color>
+    <color name="fr_record_month_title_background_color">#D8D8D8</color>
+    <color name="fr_record_text_time_color">#9B9B9B</color>
 </resources>
