--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,6 +19,8 @@
     <dimen name="dimen_dp_48">48dp</dimen>
     <dimen name="dimen_dp_50">50dp</dimen>
     <dimen name="dimen_dp_60">60dp</dimen>
+    <dimen name="dimen_dp_70">70dp</dimen>
+    <dimen name="dimen_dp_80">80dp</dimen>
     <dimen name="dimen_dp_120">120dp</dimen>
 
     <dimen name="text_size_sp_10">10sp</dimen>
