--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="dimen_dp_1">1dp</dimen>
+    <dimen name="dimen_dp_2">2dp</dimen>
+    <dimen name="dimen_dp_3">3dp</dimen>
     <dimen name="dimen_dp_4">4dp</dimen>
     <dimen name="dimen_dp_5">5dp</dimen>
     <dimen name="dimen_dp_8">8dp</dimen>
@@ -22,6 +24,9 @@
     <dimen name="dimen_dp_70">70dp</dimen>
     <dimen name="dimen_dp_80">80dp</dimen>
     <dimen name="dimen_dp_120">120dp</dimen>
+    <dimen name="dimen_dp_130">130dp</dimen>
+    <dimen name="dimen_dp_200">200dp</dimen>
+
 
     <dimen name="text_size_sp_10">10sp</dimen>
     <dimen name="text_size_sp_11">11sp</dimen>
