-e 问题: 修改通知样式 原因: 解决方案: Reviewer: 工单号: X Log: X

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="dimen_dp_20">20dp</dimen>
     <dimen name="dimen_dp_25">25dp</dimen>
     <dimen name="dimen_dp_28">28dp</dimen>
+    <dimen name="dimen_dp_30">30dp</dimen>
     <dimen name="dimen_dp_32">32dp</dimen>
     <dimen name="dimen_dp_36">36dp</dimen>
     <dimen name="dimen_dp_40">40dp</dimen>
