--- a/app/src/main/res/layout/activity_record_chart.xml
+++ b/app/src/main/res/layout/activity_record_chart.xml
@@ -70,6 +70,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/tv_total_record_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
