-e 问题: search task UI 原因: 解决方案: Reviewer: 工单号: X Log: X

--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/bar_rl_title_bar"
     android:layout_width="match_parent"
-    android:layout_height="45dp"
+    android:layout_height="@dimen/dimen_dp_44"
     android:background="@color/activity_title_bar_color">
     <!--标题栏，显示-->
     <ImageView
