--- a/app/src/main/res/layout/fragment_plan_list.xml
+++ b/app/src/main/res/layout/fragment_plan_list.xml
@@ -1,6 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fr_rv_plan_summary_list"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" />
+    android:orientation="vertical">
+     <FrameLayout
+         android:layout_marginTop="@dimen/dimen_dp_5"
+         android:id="@+id/fl_search_container"
+         android:layout_width="match_parent"
+         android:layout_marginLeft="@dimen/dimen_dp_20"
+         android:layout_marginRight="@dimen/dimen_dp_20"
+         android:background="@drawable/background_search"
+         android:layout_height="wrap_content">
+         <LinearLayout
+             android:layout_width="wrap_content"
+             android:layout_height="@dimen/dimen_dp_44"
+             android:gravity="center_vertical"
+             android:layout_gravity="center">
+
+             <ImageView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:src="@mipmap/search_icon" />
+
+             <TextView
+                 android:layout_marginLeft="@dimen/dimen_dp_10"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="@string/record_search" />
+         </LinearLayout>
+     </FrameLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/fr_rv_plan_summary_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" />
+</LinearLayout>
