--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,7 @@
     <dimen name="dimen_dp_28">28dp</dimen>
     <dimen name="dimen_dp_30">30dp</dimen>
     <dimen name="dimen_dp_32">32dp</dimen>
+    <dimen name="dimen_dp_34">34dp</dimen>
     <dimen name="dimen_dp_36">36dp</dimen>
     <dimen name="dimen_dp_40">40dp</dimen>
     <dimen name="dimen_dp_44">44dp</dimen>
